<resources>
    <string name="app_name">Successorator</string>
    <string name="placeholder">Placeholder</string>
    <string name="hello_world">Hello, World!</string>
    <string name="card_front_text">Card Front Text</string>
    <string name="task_text">Task Text</string>
    <string name="daily">daily</string>
    <string name="e">E</string>
    <string name="h">H</string>
    <string name="monthly">monthly</string>
    <string name="one_time">one time</string>
    <string name="todo">TODO</string>
    <string name="s">S</string>
    <string name="what_task_do_you_want_to_add">What task do you want to add?</string>
    <string name="weekly">weekly</string>
    <string name="w">W</string>
    <string name="yearly">yearly</string>
    <string name="forward_date_button">Forward Date Button</string>
    <string name="select_date">Select Date</string>
    <string name="starting_at">Starting at:</string>
</resources>