<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/task_edit_text"
        android:layout_width="309dp"
        android:layout_height="58dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/what_task_do_you_want_to_add"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <ImageButton
        android:id="@+id/saveButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="640dp"
        android:background="#EFDEDE"
        android:backgroundTint="#3F51B5"
        android:clickable="true"
        android:contentDescription="@string/todo"
        android:src="@android:drawable/ic_menu_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/task_edit_text"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,TouchTargetSizeCheck" />

    <LinearLayout
        android:id="@+id/tagsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="540dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_edit_text">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <RadioButton
                android:id="@+id/homeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:background="@android:color/white"
                android:backgroundTint="#F4EEBB"
                android:checked="true"
                android:text="@string/h" />

            <RadioButton
                android:id="@+id/workButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:background="@android:color/holo_blue_bright"
                android:backgroundTint="#BCD7ED"
                android:text="@string/w"
                app:layout_constraintStart_toEndOf="@id/homeButton"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/schoolButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:background="@color/purple_500"
                android:backgroundTint="#F3D5ED"
                android:text="@string/s"
                android:textColor="#000000"
                app:layout_constraintStart_toEndOf="@id/workButton"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck" />

            <RadioButton
                android:id="@+id/errandsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:backgroundTint="#D5FBAF"
                android:checked="false"
                android:text="@string/e"
                app:layout_constraintStart_toEndOf="@id/schoolButton"
                app:layout_constraintTop_toTopOf="parent" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tagsButton">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <RadioButton
                android:id="@+id/dailyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="@string/daily"
                tools:ignore="VisualLintButtonSize" />

            <RadioButton
                android:id="@+id/weeklyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="@string/weekly"
                tools:ignore="VisualLintButtonSize" />

            <RadioButton
                android:id="@+id/monthlyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="@string/monthly"
                tools:ignore="VisualLintButtonSize" />

            <RadioButton
                android:id="@+id/yearlyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yearly"
                tools:ignore="VisualLintButtonSize" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/linearLayout">

        <TextView
            android:id="@+id/startDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/starting_at"
            android:textColor="#010415"
            android:textSize="16sp" />

        <Button
            android:id="@+id/dateSelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#F5F5DC"
            android:layout_marginTop="4dp"
            android:text="@string/select_date"
            android:textColor="#0E1B64"
            android:textSize="14sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>